--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefectPicture.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefectPicture.cshtml
@@ -2,9 +2,7 @@
 
 @{
     Layout = null;
-
-    //Int64 DetailUkey = ViewData["DetailUkey"] == null ? 0 : Convert.ToInt64(ViewData["DetailUkey"]);
-    //Int64 RowIndex = ViewData["RowIndex"] == null ? 0 : Convert.ToInt64(ViewData["RowIndex"]);
+    bool IsReadonly = ViewData["IsReadonly"] == null ? false : (bool)ViewData["IsReadonly"];
 
 }
 
@@ -69,12 +67,18 @@
     <div class="grayDiv">
 
         <div class="grayInnerDiv">
-            <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
-            <img id="Upload" class="pointer" style="height: 90%; vertical-align: top; margin-right: 5px;" src="~/Image/Icon/Upload.png" />
+            @if (!IsReadonly)
+            {
+                <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
+                <img id="Upload" class="pointer" style="height: 90%; vertical-align: top; margin-right: 5px;" src="~/Image/Icon/Upload.png" />
+            }
 
         </div>
         <div class="grayInnerDiv">
-            <img Type="Pic" class="OpenCamera pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Camera.png" />
+            @if (!IsReadonly)
+            {
+                <img Type="Pic" class="OpenCamera pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Camera.png" />
+            }
         </div>
         <div class="grayInnerDiv" style="height:100%"></div>
         <div class="grayInnerDiv" style="height:100%"></div>
@@ -87,7 +91,11 @@
 
         </div>
         <div class="grayInnerDiv">
-            <img id="Del" class="pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Delete.png" />
+            @if (!IsReadonly)
+            {
+                <img id="Del" class="pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Delete.png" />
+
+            }
 
         </div>
 
@@ -164,7 +172,7 @@
                 data: JSON.stringify({ data: data, SampleRFTInspection_DetailUKey: '@Model.UKey', ID: '@Model.ID', GarmentDefectCodeID:'@Model.GarmentDefectCodeID'  }),
                 async: true,
                 success: function (data) {
-                    
+
                     // 後端加入成功之後，前端下拉選單、對應圖片也要更新
 
                     var dropDownList = JSON.parse(data[0]);
@@ -238,7 +246,7 @@
                     data: JSON.stringify({ list: PictureList, SampleRFTInspection_DetailUKey: '@Model.UKey', ID: '@Model.ID', GarmentDefectCodeID:'@Model.GarmentDefectCodeID'  }),
                     async: true,
                     success: function (data) {
-                        
+
                         // 後端加入成功之後，前端下拉選單、對應圖片也要更新
 
                         var dropDownList = JSON.parse(data[0]);
