--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/MeasurementPicture.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/MeasurementPicture.cshtml
@@ -3,8 +3,7 @@
 @{
     Layout = null;
 
-    //Int64 DetailUkey = ViewData["DetailUkey"] == null ? 0 : Convert.ToInt64(ViewData["DetailUkey"]);
-    //Int64 RowIndex = ViewData["RowIndex"] == null ? 0 : Convert.ToInt64(ViewData["RowIndex"]);
+    bool IsReadonly = ViewData["IsReadonly"] == null ? false : (bool)ViewData["IsReadonly"];
 
 }
 
@@ -69,12 +68,18 @@
     <div class="grayDiv">
 
         <div class="grayInnerDiv">
-            <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
-            <img id="Upload" class="pointer" style="height: 90%; vertical-align: top; margin-right: 5px;" src="~/Image/Icon/Upload.png" />
+            @if (!IsReadonly)
+            {
+                <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
+                <img id="Upload" class="pointer" style="height: 90%; vertical-align: top; margin-right: 5px;" src="~/Image/Icon/Upload.png" />
 
+            }
         </div>
         <div class="grayInnerDiv">
-            <img Type="Pic" class="OpenCamera pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Camera.png" />
+            @if (!IsReadonly)
+            {
+                <img Type="Pic" class="OpenCamera pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Camera.png" />
+            }
         </div>
         <div class="grayInnerDiv" style="height:100%"></div>
         <div class="grayInnerDiv" style="height:100%"></div>
@@ -87,8 +92,10 @@
 
         </div>
         <div class="grayInnerDiv">
-            <img id="Del" class="pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Delete.png" />
-
+            @if (!IsReadonly)
+            {
+                <img id="Del" class="pointer" style="height: 80%; padding-top: 5px; margin-right: 5px;" src="~/Image/Icon/Delete.png" />
+            }
         </div>
 
     </div>
