--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
@@ -1,7 +1,284 @@
 ﻿
+@model DatabaseObject.ViewModel.SampleRFT.QueryReport
 @{
-    ViewBag.Title = "Detail";
+    Layout = "~/Areas/SampleRFT/Views/Shared/_ForAll_Layout.cshtml";
 }
 
-<h2>Detail</h2>
+@section InspectionBySP_head{
+    <link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+    <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+    <link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+    <link href="~/Areas/FinalInspection/CSS/FinalInspection.css" rel="stylesheet" />
 
+    <style type="text/css">
+        .whiteBackgrond div {
+            padding-bottom: 0.5em;
+        }
+
+        .valueColor {
+            color: #0000FF;
+        }
+
+        tr.row-name {
+            color: black;
+        }
+
+        #Detail_Cartons_wrapper tr.row-name {
+            color: wheat;
+        }
+
+        #Detail_ShipmodeSeq_wrapper tr.row-name {
+            color: wheat;
+        }
+
+        #tab-Change {
+            width: 100%;
+        }
+
+            #tab-Change > ul {
+                display: block;
+                margin: 0;
+                list-style: none;
+            }
+
+        .tab-title {
+            list-style: none;
+        }
+
+        #tab-Change > ul > li {
+            display: inline-block;
+            vertical-align: top;
+            margin: 0 -1px -1px 0;
+            border: 1px solid #BCBCBC;
+            height: 4vh;
+            line-height: 25px;
+            background: #CDCDCD;
+            padding: 0 15px;
+            list-style: none;
+            box-sizing: border-box;
+        }
+
+            #tab-Change > ul > li a {
+                color: #000;
+                text-decoration: none;
+            }
+
+            #tab-Change > ul > li.active {
+                background: #fff;
+            }
+
+        #tab-Change > .tab-inner {
+            padding: 10px;
+            color: #000;
+            border: 1px #BCBCBC solid;
+            height: 50vh;
+            overflow: scroll;
+            overflow-x: hidden;
+        }
+
+        #Detail_Cartons_info {
+            color: white
+        }
+
+        #Detail_Cartons_previous, #Detail_Cartons_next {
+            color: white !important;
+        }
+
+        #Detail_Cartons_wrapper, #Detail_Cartons_wrapper > .dataTables_scrollHeadInner {
+            width: 100%
+        }
+
+        #Detail_ShipmodeSeq_info {
+            color: white
+        }
+
+        #Detail_ShipmodeSeq_previous, #Detail_ShipmodeSeq_next {
+            color: white !important;
+        }
+
+        #Detail_ShipmodeSeq_wrapper, #Detail_ShipmodeSeq_wrapper > .dataTables_scrollHeadInner {
+            width: 100%
+        }
+
+        textarea {
+            height: 20px;
+        }
+    </style>
+}
+
+
+<div class="whiteBackgrond" style="height:86vh">
+    <div style="padding:1em">
+        <div>
+            <h1 style="font-size:2em;color: #999999;">Inspection Report</h1>
+            <button class="site-btn btn-blue" style="position:absolute;top:1em;right:0" onclick="ClickDownload()">Download</button>
+        </div>
+        <div style="display:inline-block;border:1px solid gray;width:38%;height:15vh;padding-left:5px">
+            <div><h1 style="font-size:1.5em">PO information</h1></div>
+            <div>
+                <table>
+                    <tr>
+                        <td>SP#</td>
+                        <td class="valueColor" style="width:20%">@Model.Setting.OrderID</td>
+                        <td style="padding-left:10px;">PO#</td>
+                        <td class="valueColor" style="width:20%">@Model.Setting.CustPONo</td>
+                    </tr>
+                    <tr>
+                        <td>Style</td>
+                        <td class="valueColor">@Model.Setting.StyleID</td>
+                        <td style="padding-left:10px;">Brand</td>
+                        <td class="valueColor" style="width:20%">@Model.Setting.BrandID</td>
+                        <td style="padding-left:10px;">Season</td>
+                        <td class="valueColor" style="width:20%">@Model.Setting.SeasonID</td>
+                    </tr>
+                    <tr>
+                        <td>Article</td>
+                        <td class="valueColor" colspan="5">
+                            <input type="text" value="@Model.Setting.Article" style="width:100%" readonly />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-right:10px;">Factory</td>
+                        <td class="valueColor">@Model.Setting.FactoryID</td>
+                        <td style="padding-left:10px;">Sample Stage</td>
+                        <td class="valueColor" style="width:20%">@Model.Setting.SampleStage</td>
+                        <td style="padding-left:10px;">Order Qty</td>
+                        <td class="valueColor" style="width:20%">@Model.Setting.OrderQty</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div style="display:inline-block;border:1px solid gray;width:58%;height:15vh;padding-left:5px">
+            <div><h1 style="font-size:1.5em">Inspection Setting</h1></div>
+            <div>
+                <table>
+                    <tr>
+                        <td>Inspection Stage</td>
+                        <td colspan="7" class="valueColor" style="padding-left:10px;">@Model.sampleRFTInspection.InspectionStage     @Model.sampleRFTInspection.InspectionTimesText </td>
+
+                    </tr>
+                    <tr>
+                        <td>Inspection Date</td>
+                        <td class="valueColor">@Convert.ToDateTime(Model.sampleRFTInspection.InspectionDate).ToString("yyyy/MM/dd")</td>
+
+                        <td style="padding-left:10px;">Sewing Line</td>
+                        <td class="valueColor">@Model.sampleRFTInspection.SewingLineID</td>
+
+                        <td style="padding-left:10px;">QC in Charge</td>
+                        <td colspan="3" class="valueColor">@Model.sampleRFTInspection.QCInCharge</td>
+                    </tr>
+                    <tr>
+                        <td>AQL Plan</td>
+                        <td class="valueColor">@Model.Setting.AQLPlan</td>
+
+                        <td style="padding-left:10px;">Sample Plan Qty</td>
+                        <td class="valueColor" style="padding-left:10px;">@Model.sampleRFTInspection.SampleSize</td>
+
+                        <td>Accepted</td>
+                        <td class="valueColor">@Model.sampleRFTInspection.AcceptQty</td>
+
+                        <td>Rejected</td>
+                        <td class="valueColor" style="padding-left:10px;">@(Model.sampleRFTInspection.AcceptQty+1)</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div style="margin:0.5em"><h1 style="font-size:2em">Inspection Detail</h1></div>
+        <div id="tab-Change">
+            <ul class="tab-title">
+                <li link="#tab01">Check List</li>
+                <li link="#tab02">Measurement</li>
+                <li link="#tab03">Defect</li>
+                <li link="#tab04">Beautiful Product Audit</li>
+                <li link="#tab05">Dummy Fitting</li>
+                <li link="#tab06">Others</li>
+            </ul>
+            <div id="tab01" class="tab-inner">
+                <div style="height:auto">
+                    @Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab1_Layout.cshtml")
+                </div>
+            </div>
+            <div id="tab02" class="tab-inner">
+                @Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab2_Layout.cshtml")
+            </div>
+            <div id="tab03" class="tab-inner">
+                @Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab3_Layout.cshtml")
+            </div>
+            <div id="tab04" class="tab-inner">
+                @Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab4_Layout.cshtml")
+            </div>
+            <div id="tab05" class="tab-inner">
+                @*@Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab5_Layout.cshtml")c*@
+            </div>
+            <div id="tab06" class="tab-inner">
+                @*@Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab6_Layout.cshtml")*@
+            </div>
+        </div>
+        <div>
+            <table style="width:100%">
+                <tr>
+                    <td style="width:7%">CFA</td>
+                    <td class="valueColor" style="width:10%">@Model.sampleRFTInspection.AddName</td>
+
+                    <td style="width:7%">Pass Qty(pcs)</td>
+                    <td class="valueColor" style="width:5%">@Model.sampleRFTInspection.PassQty</td>
+
+                    <td style="width:7%">Inpection Result</td>
+                    <td class="valueColor" style="width:10%">@Model.sampleRFTInspection.Result</td>
+                    <td style="width:7%" rowspan="2">
+                        @if (Model.sampleRFTInspection.Result == "On-going")
+                        {
+                            <button type="button" onclick="GoOnInspect()" class="site-btn btn-red">Go On Inspect</button>
+                        }
+                    </td>
+                    <td style="width:7%" rowspan="2">
+                        @if (Model.sampleRFTInspection.Result != "On-going")
+                        {
+                            <button type="button" onclick="SendMail()" class="site-btn btn-blue">Send Mail</button>
+                        }
+                    </td>
+                </tr>
+                <tr>
+                    <td>Submit Date</td>
+                    <td class="valueColor">
+                        @if (Model.sampleRFTInspection.SubmitDate == null)
+                        {
+                            @:N/A
+                        }
+                        else
+                        {
+                            @Convert.ToDateTime(Model.sampleRFTInspection.SubmitDate).ToString("yyyy/MM/dd")
+                        }
+                    </td>
+                    <td>Reject Qty(pcs)</td>
+                    <td class="valueColor">@Model.sampleRFTInspection.RejectQty</td>
+
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+
+@section InspectionBySP_script
+{
+    <script>
+        var msg = new MessagerAlert();
+
+        $(function () {
+            tabChange();
+
+        });
+
+        function tabChange() {
+            var $li = $('#tab-Change > ul.tab-title li');
+            $($li.eq(0).attr('link')).show();
+
+            $($li.eq(0).addClass('active').attr('link')).siblings('.tab-inner').hide();
+            $li.click(function () {
+                $($(this).attr('link')).show().siblings('.tab-inner').hide();
+                $(this).addClass('active').siblings('.active').removeClass('active');
+            });
+        }
+    </script>
+}
