--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
@@ -209,7 +209,7 @@
                 @Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab4_Layout.cshtml")
             </div>
             <div id="tab05" class="tab-inner">
-                @*@Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab5_Layout.cshtml")c*@
+                @Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab5_Layout.cshtml")c
             </div>
             <div id="tab06" class="tab-inner">
                 @*@Html.Partial("~/Areas/SampleRFT/Views/InspBySPQuery/_Tab6_Layout.cshtml")*@
