--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab5_Layout.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab5_Layout.cshtml
@@ -20,129 +20,112 @@
     }
 </style>
 
-@model DatabaseObject.ViewModel.FinalInspection.QueryReport
+@model DatabaseObject.ViewModel.SampleRFT.QueryReport
 
 <div class="content-scroll" style=" height: calc( 100vh - 280px )">
     <div class="inner-scroll" style="float:left">
         <div>
-            <table cellspacing="100" id="Tab5Table" class="table table-striped display">
-                <thead>
-                    <tr id="row-name" class="row-name">
-                        <th>Article</th>
-                        <th>CTN#</th>
-                        <th>Detection<br>Instrument</th>
-                        <th>Fabrication</th>
-                        <th>Garment<br>Moisture<br>Standard</th>
-                        <th>Garment<br>Moisture<br>Top</th>
-                        <th>Garment<br>Moisture<br>Middle</th>
-                        <th>Garment<br>Moisture<br>Bottom</th>
-                        <th>Carton<br>Moisture<br>Standard</th>
-                        <th>Carton<br>Moisture<br>Inside</th>
-                        <th>Carton<br>Moisture<br>Outside</th>
-                        <th>Result</th>
-                        <th>Action</th>
-                        <th>Remark</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.ListViewMoistureResult)
+            <div style="width:100%;height:6vh;padding-top:5px;">
+                <label>&emsp;&emsp;SP No.&emsp;</label>
+                <label class="blue">@Model.sampleRFTInspection.OrderID&emsp;&emsp;</label>
+                <label>Style&emsp;</label>
+                <label class="blue">@Model.sampleRFTInspection.StyleID&emsp;&emsp;</label>
+                <label>Article&emsp;</label>
+                @Html.DropDownList("dropArticle", Model.DummyFit.ArticleList, null, new { @class = "form-control" })
+                <label>&emsp;Size&emsp;</label>
+                @Html.DropDownList("dropSize", Model.DummyFit.SizeList, null, new { @class = "form-control" })
+
+            </div>
+
+            <div style="width: 100%; height: 65vh;margin-left:5px;">
+                <div style="width:33%;height:5%;float:left;text-align:center;border-right:1px solid black;background-color:lightgray;padding-top:5px">
+                    <div>
+                        <label>Front</label>
+                    </div>
+                </div>
+                <div style="width:33%;height:5%;float:left;text-align:center;border-right:1px solid black;background-color:lightgray;padding-top:5px">
+                    <div>
+                        <label>Side</label>
+                    </div>
+
+                </div>
+                <div style="width:33%;height:5%;float:left;text-align:center;background-color:lightgray;padding-top:5px">
+                    <div>
+                        <label>Back</label>
+                    </div>
+                </div>
+
+                <div style="width: 33%; height: 90%; float: left; border-right: 1px solid black; border-bottom: 1px solid black; ">
+                    <img id="tmpPictureFront" class="tmpimage" style="max-width: 98%; max-height: 98%; " />
+                    @{ int index = 0;}
+                    @foreach (var data in Model.DummyFit.DetailList)
                     {
-                        string garmentTopColor = "Black";
-                        if (item.GarmentTop > item.GarmentStandard)
+                        @Html.Hidden($"Req.DetailList[{index}].Article", data.Article)
+                        @Html.Hidden($"Req.DetailList[{index}].Size", data.Size)
+                        @Html.Hidden($"Req.DetailList[{index}].Front", data.Front, new { @article = data.Article, @size = data.Size, @Piclocation = "Front" })
+
+                        if (data.Front == null || data.Front is null)
                         {
-                            garmentTopColor = "#E62513";
+                            <img id="Front_@index" name="Req.DetailList[@index].Front" class="image" article="@data.Article" size="@data.Size" Piclocation="Front" style="max-width: 98%; max-height: 98%; display: none; " />
+                        }
+                        else
+                        {
+                            var byteImage = data.Front;
+                            var base64 = Convert.ToBase64String(byteImage);
+                            var imgSrc = String.Format("data:image/png;base64,{0}", base64);
+
+                            <img id="Front_@index" name="Req.DetailList[@index].Front" class="image" article="@data.Article" size="@data.Size" Piclocation="Front" style="max-width: 98%; max-height: 98%; display: none; " src="@imgSrc" />
                         }
 
-                        string garmentMiddleColor = "Black";
-                        if (item.GarmentMiddle > item.GarmentStandard)
-                        {
-                            garmentMiddleColor = "#E62513";
-                        }
-
-                        string garmentBottomColor = "Black";
-                        if (item.GarmentBottom > item.GarmentStandard)
-                        {
-                            garmentBottomColor = "#E62513";
-                        }
-
-                        string ctnInsideColor = "Black";
-                        if (item.CTNInside > item.CTNStandard)
-                        {
-                            ctnInsideColor = "#E62513";
-                        }
-
-                        string ctnOutsideColor = "Black";
-                        if (item.CTNOutside > item.CTNStandard)
-                        {
-                            ctnOutsideColor = "#E62513";
-                        }
-
-                        string resultColor = "#00CC00";
-                        if (item.Result != "Pass")
-                        {
-                            resultColor = "#E62513";
-                        }
-
-                        <tr class="row-content" style="vertical-align: middle; text-align: center;">
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Article)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CTNNo)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Instrument)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Fabrication)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.GarmentStandard)
-                            </td>
-                            <td>
-                                <div style="color:@garmentTopColor">
-                                    @Html.DisplayFor(modelItem => item.GarmentTop)
-                                </div>
-                            </td>
-                            <td>
-                                <div style="color:@garmentMiddleColor">
-                                    @Html.DisplayFor(modelItem => item.GarmentMiddle)
-                                </div>
-                            </td>
-                            <td>
-                                <div style="color:@garmentBottomColor">
-                                    @Html.DisplayFor(modelItem => item.GarmentBottom)
-                                </div>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.CTNStandard)
-                            </td>
-                            <td>
-                                <div style="color:@ctnInsideColor">
-                                    @Html.DisplayFor(modelItem => item.CTNInside)
-                                </div>
-                            </td>
-                            <td>
-                                <div style="color:@ctnOutsideColor">
-                                    @Html.DisplayFor(modelItem => item.CTNOutside)
-                                </div>
-                            </td>
-                            <td>
-                                <div style="color:@resultColor">
-                                    @Html.DisplayFor(modelItem => item.Result)
-                                </div>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Action)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Remark)
-                            </td>
-                        </tr>
+                        index++;
                     }
-                </tbody>
+                </div>
+                <div style="width: 33%; height: 90%; float: left; border-right: 1px solid black; border-bottom: 1px solid black; ">
+                    <img id="tmpPictureSide" class="tmpimage" style="max-width: 98%; max-height: 98%; " />
 
-            </table>
+                    @{ index = 0; }
+                    @foreach (var data in Model.DummyFit.DetailList)
+                    {
+                        @Html.Hidden($"Req.DetailList[{index}].Side", data.Side, new { @article = data.Article, @size = data.Size, @Piclocation = "Side" })
+                        if (data.Side == null || data.Side is null)
+                        {
+                            <img id="Side_@index" class="image" name="Req.DetailList[@index].Side" article="@data.Article" size="@data.Size" Piclocation="Side" style="max-width: 98%; max-height: 98%; display: none; " />
+                        }
+                        else
+                        {
+                            var byteImage = data.Side;
+                            var base64 = Convert.ToBase64String(byteImage);
+                            var imgSrc = String.Format("data:image/png;base64,{0}", base64);
+
+                            <img id="Side_@index" class="image" name="Req.DetailList[@index].Side" article="@data.Article" size="@data.Size" Piclocation="Side" style="max-width: 98%; max-height: 98%; display: none; " src="@imgSrc" />
+                        }
+                        index++;
+                    }
+                </div>
+                <div style="width: 33%; height: 90%; float: left; border-bottom: 1px solid black;">
+                    <img id="tmpPictureBack" class="tmpimage" style="max-width: 98%; max-height: 98%; " />
+
+                    @{ index = 0; }
+                    @foreach (var data in Model.DummyFit.DetailList)
+                    {
+                        @Html.Hidden($"Req.DetailList[{index}].Back", data.Back, new { @article = data.Article, @size = data.Size, @Piclocation = "Back" })
+                        if (data.Back == null || data.Back is null)
+                        {
+                            <img id="Back_@index" class="image" name="Req.DetailList[@index].Back" article="@data.Article" size="@data.Size" Piclocation="Back" style="max-width: 98%; max-height: 98%; display: none; " />
+                        }
+                        else
+                        {
+                            var byteImage = data.Back;
+                            var base64 = Convert.ToBase64String(byteImage);
+                            var imgSrc = String.Format("data:image/png;base64,{0}", base64);
+
+                            <img id="Back_@index" class="image" name="Req.DetailList[@index].Back" article="@data.Article" size="@data.Size" Piclocation="Back" style="max-width: 98%; max-height: 98%; display: none; " src="@imgSrc" />
+                        }
+                        index++;
+                    }
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
@@ -156,16 +139,74 @@
 
     $(function () {
 
-        $('#Tab5Table').DataTable({
+            $("#dropArticle").change(function () {
 
-            "filter": false,
-            "paging": false,
+                var article = $(this).val();
 
-            "scrollX": true
+                $.ajax({
+                    url: "@Url.Action("GetNewSizeByArticle_DF", "InspectionBySP" )",
+                    data: { Article: article },
+                    type: 'POST',
+                    dataType: "json",
+                    async: false,
+                    success: function (datas) {
 
+                        var sizeOption = "";
+                        var sizeArrList = [];
+
+                        $.each(datas, function (index, obj) {
+                            sizeArrList.push(obj.Value);
+                        });
+
+
+                        $.each(sizeArrList, function (index, value) {
+                            sizeOption += "<option value=" + value + " >" + value + "</option>";
+                        });
+
+                        $("#dropSize").html(sizeOption);
+
+                        ReloadImg();
+                    },
+                    error: function (xhr, ajaxOptions, thrownError) {
+                        console.log(xhr.responseText);
+                    }
+                });
+            });
+
+        $("#dropSize").change(function () {
+            ReloadImg();
         });
+
+        ReloadImg();
     });
 
+
+    function ReloadImg() {
+        var article = $("#dropArticle").val();
+        var size = $("#dropSize").val();
+
+        $(".image").hide();
+
+        $(`.image[article=${article}][size=${size}]`).show();
+
+        var FrontImg = $(`.image[article=${article}][size=${size}][Piclocation=Front]`).attr('src');
+        if (FrontImg != undefined && FrontImg != null && FrontImg != '') {
+            FrontImg = FrontImg.replace('data:image/png;base64,', '');
+        }
+        $(`input[article=${article}][size=${size}][Piclocation=Front]`).val(FrontImg);
+
+        var SideImg = $(`.image[article=${article}][size=${size}][Piclocation=Side]`).attr('src');
+        if (SideImg != undefined && SideImg != null && SideImg != '') {
+            SideImg = SideImg.replace('data:image/png;base64,', '');
+        }
+        $(`input[article=${article}][size=${size}][Piclocation=Side]`).val(SideImg);
+
+        var BackImg = $(`.image[article=${article}][size=${size}][Piclocation=Back]`).attr('src');
+        if (BackImg != undefined && BackImg != null && BackImg != '') {
+            BackImg = BackImg.replace('data:image/png;base64,', '');
+        }
+        $(`input[article=${article}][size=${size}][Piclocation=Back]`).val(BackImg);
+    }
 </script>
 
 
