ISP20220673 - 因應SPR正式機和備機放在同一台，Garment Test與增加判斷是否存在同一台Instance，以調整SQL

--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -1194,6 +1194,8 @@
         $('#Picture').on('click', function () {
             var para = "?Title=" + $('.page-header span').html() + "&EditMode=" + EditMode;
             para += "&" + "Table=GarmentTest_Detail";
+            para += "&" + "TargetBeforeColumn=Detail_TestBeforePicture";
+            para += "&" + "TargetAfterColumn=Detail_TestAfterPicture";
             para += "&" + "BeforeColumn=TestBeforePicture";
             para += "&" + "AfterColumn=TestAfterPicture";
             para += "&" + "PKey_1=ID";
