--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
@@ -40,16 +40,17 @@
     @using (Html.BeginForm("CheckList", "InspectionBySP", FormMethod.Post, new { @id = "settingForm", onsubmit = "return checkSubmitValue(this.submitted);" }))
     {
         @Html.HiddenFor(o => o.ID)
+        @Html.HiddenFor(o => o.OrderID)
 
         <div style="padding:2em 3em 2em 3em;width:60%;float:left;position: absolute;transform: translate(-50%, 0%);left: 50%">
 
-            
+
             <table id="" class="cell-border" style="width:100%">
                 @*<tr>
-                    <td>&emsp;</td>
-                    <td style="font-size:1rem;font-weight:bolder">Select All</td>
-                    <td style="text-align: center;">@Html.CheckBox("SelectAll",new {@onclick= "SelectAllClick(this)" })</td>
-                </tr>*@
+                        <td>&emsp;</td>
+                        <td style="font-size:1rem;font-weight:bolder">Select All</td>
+                        <td style="text-align: center;">@Html.CheckBox("SelectAll",new {@onclick= "SelectAllClick(this)" })</td>
+                    </tr>*@
                 <tr>
                     <td>&emsp;</td>
                     <td style="font-size:1rem;">Fabric Approval</td>
