ISP20220560 - SampleRFT Inspection 修正

--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Setting.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Setting.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Setting";
     Layout = "~/Areas/SampleRFT/Views/Shared/_ForAll_Layout.cshtml";
 
-    bool AQLPlanDisabled = Model.AQLPlan == "100%";
-    bool SampleQtyDisabled = AQLPlanDisabled;
+    bool AQLPlanDisabled = Model.InspectionStage == "100%";
+    bool SampleQtyDisabled = !AQLPlanDisabled;
 }
 
 
