--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
@@ -39,7 +39,15 @@
             @Html.CheckBoxFor(o => o.FinalInspection.GarmentWashingDoc, new { @disabled = "disabled", @class = "checkboxInput" })
         </td>
         <td>
-            <div><label class="checkboxlabel">Garment Washing Test</label></div>
+            <div><label class="checkboxlabel">Garment Washing Test (FGWT)</label></div>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            @Html.CheckBoxFor(o => o.FinalInspection.CheckFGPT, new { @disabled = "disabled", @class = "checkboxInput" })
+        </td>
+        <td>
+            <div><label class="checkboxlabel">FGPT</label></div>
         </td>
     </tr>
 </table>
